--- a/gvcmodel.ipynb
+++ b/gvcmodel.ipynb
@@ -3,17 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch 1/10\n702/702 [==============================] - 48s 68ms/step - loss: 0.6408 - accuracy: 0.6274 - val_loss: 0.5853 - val_accuracy: 0.6946\nEpoch 2/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.5519 - accuracy: 0.7201 - val_loss: 0.5559 - val_accuracy: 0.7090\nEpoch 3/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.5022 - accuracy: 0.7545 - val_loss: 0.5178 - val_accuracy: 0.7443\nEpoch 4/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.4642 - accuracy: 0.7789 - val_loss: 0.5062 - val_accuracy: 0.7547\nEpoch 5/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.4259 - accuracy: 0.8004 - val_loss: 0.4852 - val_accuracy: 0.7651\nEpoch 6/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.3894 - accuracy: 0.8200 - val_loss: 0.4867 - val_accuracy: 0.7695\nEpoch 7/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.3590 - accuracy: 0.8386 - val_loss: 0.4954 - val_accuracy: 0.7780\nEpoch 8/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.3197 - accuracy: 0.8560 - val_loss: 0.5014 - val_accuracy: 0.7884\nEpoch 9/10\n702/702 [==============================] - 47s 67ms/step - loss: 0.2961 - accuracy: 0.8680 - val_loss: 0.5008 - val_accuracy: 0.7764\nEpoch 10/10\n702/702 [==============================] - 48s 68ms/step - loss: 0.2675 - accuracy: 0.8847 - val_loss: 0.5144 - val_accuracy: 0.7904\n"
+     "text": "Epoch 1/10\n702/702 [==============================] - 100s 142ms/step - loss: 0.6149 - accuracy: 0.6754 - val_loss: 0.5879 - val_accuracy: 0.6766\nEpoch 2/10\n702/702 [==============================] - 98s 140ms/step - loss: 0.5184 - accuracy: 0.7470 - val_loss: 0.6499 - val_accuracy: 0.6285\nEpoch 3/10\n702/702 [==============================] - 101s 144ms/step - loss: 0.4693 - accuracy: 0.7763 - val_loss: 0.5034 - val_accuracy: 0.7531\nEpoch 4/10\n702/702 [==============================] - 103s 146ms/step - loss: 0.4267 - accuracy: 0.8011 - val_loss: 0.5549 - val_accuracy: 0.7299\nEpoch 5/10\n702/702 [==============================] - 99s 140ms/step - loss: 0.3813 - accuracy: 0.8229 - val_loss: 1.2818 - val_accuracy: 0.6236\nEpoch 6/10\n702/702 [==============================] - 99s 141ms/step - loss: 0.3438 - accuracy: 0.8465 - val_loss: 0.7580 - val_accuracy: 0.6974\nEpoch 7/10\n702/702 [==============================] - 99s 141ms/step - loss: 0.2970 - accuracy: 0.8714 - val_loss: 0.9141 - val_accuracy: 0.6673\nEpoch 8/10\n702/702 [==============================] - 100s 142ms/step - loss: 0.2528 - accuracy: 0.8926 - val_loss: 0.5547 - val_accuracy: 0.7238\nEpoch 9/10\n702/702 [==============================] - 99s 141ms/step - loss: 0.2181 - accuracy: 0.9082 - val_loss: 0.5477 - val_accuracy: 0.7768\nEpoch 10/10\n702/702 [==============================] - 103s 146ms/step - loss: 0.1849 - accuracy: 0.9221 - val_loss: 0.6178 - val_accuracy: 0.7924\n"
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<tensorflow.python.keras.callbacks.History at 0x7f74a2c61fd0>"
+      "text/plain": "<tensorflow.python.keras.callbacks.History at 0x7fded3f3a370>"
      },
      "metadata": {},
      "execution_count": 3
@@ -23,7 +25,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D, BatchNormalization\n",
     "from tensorflow.keras.callbacks import TensorBoard\n",
     "import pickle\n",
     "import time\n",
@@ -41,9 +43,11 @@
     "model = Sequential()\n",
     "\n",
     "model.add(Conv2D(64, (5, 5), strides=(1, 1), activation='relu', input_shape = X.shape[1:]))\n",
+    "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
     "\n",
     "model.add(Conv2D(64, (5, 5), strides=(2, 2), activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
     "model.add(Flatten())\n",
@@ -63,27 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/paul/.local/lib/python3.8/site-packages/tensorflow/python/ops/resource_variable_ops.py:1813: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "INFO:tensorflow:Assets written to: CatsvDogs/assets\n"
-     ]
+     "name": "stdout",
+     "text": "WARNING:tensorflow:From /usr/local/lib/python3.8/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\nInstructions for updating:\nThis property should not be used in TensorFlow 2.0, as updates are applied automatically.\nWARNING:tensorflow:From /usr/local/lib/python3.8/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\nInstructions for updating:\nThis property should not be used in TensorFlow 2.0, as updates are applied automatically.\nINFO:tensorflow:Assets written to: NewCatsvDogs/assets\n"
     }
    ],
    "source": [
-    "model.save('CatsvDogs')"
+    "model.save('NewCatsvDogs')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,21 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[[0.0106433 ]\n",
-      " [0.24636489]\n",
-      " [0.05652991]\n",
-      " ...\n",
-      " [0.6447019 ]\n",
-      " [0.97428083]\n",
-      " [0.9062601 ]]\n"
-     ]
+     "name": "stdout",
+     "text": "[[4.1148067e-04]\n [8.6247921e-04]\n [2.5194883e-04]\n ...\n [2.8096813e-01]\n [9.9821389e-01]\n [9.1613114e-01]]\n"
     }
    ],
    "source": [
@@ -150,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "3877\n"
-     ]
+     "name": "stdout",
+     "text": "255\n"
     }
    ],
    "source": [
@@ -175,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38564bit2983776f7d11450ab6999cef2bac2d64"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
